// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography h1 element should render as h1 variant style 1`] = `
.c0 {
  font-size: 2.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h1
  className="c0"
>
  Test
</h1>
`;

exports[`Typography h1 element should render as h2 variant style 1`] = `
.c0 {
  font-size: 2rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h1
  className="c0"
>
  Test
</h1>
`;

exports[`Typography h1 element should render as h3 variant style 1`] = `
.c0 {
  font-size: 1.75rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h1
  className="c0"
>
  Test
</h1>
`;

exports[`Typography h1 element should render as h4 variant style 1`] = `
.c0 {
  font-size: 1.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h1
  className="c0"
>
  Test
</h1>
`;

exports[`Typography h1 element should render as h5 variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h1
  className="c0"
>
  Test
</h1>
`;

exports[`Typography h1 element should render as h6 variant style 1`] = `
.c0 {
  font-size: 1rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h1
  className="c0"
>
  Test
</h1>
`;

exports[`Typography h1 element should render as lead variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: 300;
}

<h1
  className="c0"
>
  Test
</h1>
`;

exports[`Typography h1 element should render as p variant style 1`] = `
.c0 {
  font-size: 1rem;
}

<h1
  className="c0"
>
  Test
</h1>
`;

exports[`Typography h2 element should render as h1 variant style 1`] = `
.c0 {
  font-size: 2.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h2
  className="c0"
>
  Test
</h2>
`;

exports[`Typography h2 element should render as h2 variant style 1`] = `
.c0 {
  font-size: 2rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h2
  className="c0"
>
  Test
</h2>
`;

exports[`Typography h2 element should render as h3 variant style 1`] = `
.c0 {
  font-size: 1.75rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h2
  className="c0"
>
  Test
</h2>
`;

exports[`Typography h2 element should render as h4 variant style 1`] = `
.c0 {
  font-size: 1.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h2
  className="c0"
>
  Test
</h2>
`;

exports[`Typography h2 element should render as h5 variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h2
  className="c0"
>
  Test
</h2>
`;

exports[`Typography h2 element should render as h6 variant style 1`] = `
.c0 {
  font-size: 1rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h2
  className="c0"
>
  Test
</h2>
`;

exports[`Typography h2 element should render as lead variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: 300;
}

<h2
  className="c0"
>
  Test
</h2>
`;

exports[`Typography h2 element should render as p variant style 1`] = `
.c0 {
  font-size: 1rem;
}

<h2
  className="c0"
>
  Test
</h2>
`;

exports[`Typography h3 element should render as h1 variant style 1`] = `
.c0 {
  font-size: 2.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h3
  className="c0"
>
  Test
</h3>
`;

exports[`Typography h3 element should render as h2 variant style 1`] = `
.c0 {
  font-size: 2rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h3
  className="c0"
>
  Test
</h3>
`;

exports[`Typography h3 element should render as h3 variant style 1`] = `
.c0 {
  font-size: 1.75rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h3
  className="c0"
>
  Test
</h3>
`;

exports[`Typography h3 element should render as h4 variant style 1`] = `
.c0 {
  font-size: 1.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h3
  className="c0"
>
  Test
</h3>
`;

exports[`Typography h3 element should render as h5 variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h3
  className="c0"
>
  Test
</h3>
`;

exports[`Typography h3 element should render as h6 variant style 1`] = `
.c0 {
  font-size: 1rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h3
  className="c0"
>
  Test
</h3>
`;

exports[`Typography h3 element should render as lead variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: 300;
}

<h3
  className="c0"
>
  Test
</h3>
`;

exports[`Typography h3 element should render as p variant style 1`] = `
.c0 {
  font-size: 1rem;
}

<h3
  className="c0"
>
  Test
</h3>
`;

exports[`Typography h4 element should render as h1 variant style 1`] = `
.c0 {
  font-size: 2.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h4
  className="c0"
>
  Test
</h4>
`;

exports[`Typography h4 element should render as h2 variant style 1`] = `
.c0 {
  font-size: 2rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h4
  className="c0"
>
  Test
</h4>
`;

exports[`Typography h4 element should render as h3 variant style 1`] = `
.c0 {
  font-size: 1.75rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h4
  className="c0"
>
  Test
</h4>
`;

exports[`Typography h4 element should render as h4 variant style 1`] = `
.c0 {
  font-size: 1.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h4
  className="c0"
>
  Test
</h4>
`;

exports[`Typography h4 element should render as h5 variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h4
  className="c0"
>
  Test
</h4>
`;

exports[`Typography h4 element should render as h6 variant style 1`] = `
.c0 {
  font-size: 1rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h4
  className="c0"
>
  Test
</h4>
`;

exports[`Typography h4 element should render as lead variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: 300;
}

<h4
  className="c0"
>
  Test
</h4>
`;

exports[`Typography h4 element should render as p variant style 1`] = `
.c0 {
  font-size: 1rem;
}

<h4
  className="c0"
>
  Test
</h4>
`;

exports[`Typography h5 element should render as h1 variant style 1`] = `
.c0 {
  font-size: 2.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h5
  className="c0"
>
  Test
</h5>
`;

exports[`Typography h5 element should render as h2 variant style 1`] = `
.c0 {
  font-size: 2rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h5
  className="c0"
>
  Test
</h5>
`;

exports[`Typography h5 element should render as h3 variant style 1`] = `
.c0 {
  font-size: 1.75rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h5
  className="c0"
>
  Test
</h5>
`;

exports[`Typography h5 element should render as h4 variant style 1`] = `
.c0 {
  font-size: 1.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h5
  className="c0"
>
  Test
</h5>
`;

exports[`Typography h5 element should render as h5 variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h5
  className="c0"
>
  Test
</h5>
`;

exports[`Typography h5 element should render as h6 variant style 1`] = `
.c0 {
  font-size: 1rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h5
  className="c0"
>
  Test
</h5>
`;

exports[`Typography h5 element should render as lead variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: 300;
}

<h5
  className="c0"
>
  Test
</h5>
`;

exports[`Typography h5 element should render as p variant style 1`] = `
.c0 {
  font-size: 1rem;
}

<h5
  className="c0"
>
  Test
</h5>
`;

exports[`Typography h6 element should render as h1 variant style 1`] = `
.c0 {
  font-size: 2.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h6
  className="c0"
>
  Test
</h6>
`;

exports[`Typography h6 element should render as h2 variant style 1`] = `
.c0 {
  font-size: 2rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h6
  className="c0"
>
  Test
</h6>
`;

exports[`Typography h6 element should render as h3 variant style 1`] = `
.c0 {
  font-size: 1.75rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h6
  className="c0"
>
  Test
</h6>
`;

exports[`Typography h6 element should render as h4 variant style 1`] = `
.c0 {
  font-size: 1.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h6
  className="c0"
>
  Test
</h6>
`;

exports[`Typography h6 element should render as h5 variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h6
  className="c0"
>
  Test
</h6>
`;

exports[`Typography h6 element should render as h6 variant style 1`] = `
.c0 {
  font-size: 1rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<h6
  className="c0"
>
  Test
</h6>
`;

exports[`Typography h6 element should render as lead variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: 300;
}

<h6
  className="c0"
>
  Test
</h6>
`;

exports[`Typography h6 element should render as p variant style 1`] = `
.c0 {
  font-size: 1rem;
}

<h6
  className="c0"
>
  Test
</h6>
`;

exports[`Typography p element should render as h1 variant style 1`] = `
.c0 {
  font-size: 2.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<p
  className="c0"
>
  Test
</p>
`;

exports[`Typography p element should render as h2 variant style 1`] = `
.c0 {
  font-size: 2rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<p
  className="c0"
>
  Test
</p>
`;

exports[`Typography p element should render as h3 variant style 1`] = `
.c0 {
  font-size: 1.75rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<p
  className="c0"
>
  Test
</p>
`;

exports[`Typography p element should render as h4 variant style 1`] = `
.c0 {
  font-size: 1.5rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<p
  className="c0"
>
  Test
</p>
`;

exports[`Typography p element should render as h5 variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<p
  className="c0"
>
  Test
</p>
`;

exports[`Typography p element should render as h6 variant style 1`] = `
.c0 {
  font-size: 1rem;
  color: inherit;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: .5rem;
}

<p
  className="c0"
>
  Test
</p>
`;

exports[`Typography p element should render as lead variant style 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: 300;
}

<p
  className="c0"
>
  Test
</p>
`;

exports[`Typography p element should render as p variant style 1`] = `
.c0 {
  font-size: 1rem;
}

<p
  className="c0"
>
  Test
</p>
`;
